# Implementation_Optimization

./: CMakeLists.txt  main.cpp
GaussNewtonSolver/: EllipsoidFitting.cpp  EllipsoidFitting.h  ExactLineSearch.cpp  ExactLineSearch.h  LineSearch.cpp  LineSearch.h  MatrixUtility.cpp  MatrixUtility.h  SoftLineSearch.cpp  SoftLineSearch.h  Solver2776.cpp  Solver2776.h  ellipsoidFittingvisualization.m  hw3_gn.h
